draw toggles programatically

--- a/src/ui/chord-diagram.ui
+++ b/src/ui/chord-diagram.ui
@@ -5,33 +5,10 @@
       <object class="GtkBox">
         <property name="orientation">vertical</property>
         <child>
-          <object class="GtkBox">
+          <object class="GtkBox" id="top_row">
             <property name="homogeneous">true</property>
             <property name="margin-bottom">6</property>
-            <child>
-              <object class="FretboardChordDiagramTopToggle" id="string_1_top">
-              </object>
-            </child>
-            <child>
-              <object class="FretboardChordDiagramTopToggle" id="string_2_top">
-              </object>
-            </child>
-            <child>
-              <object class="FretboardChordDiagramTopToggle" id="string_3_top">
-              </object>
-            </child>
-            <child>
-              <object class="FretboardChordDiagramTopToggle" id="string_4_top">
-              </object>
-            </child>
-            <child>
-              <object class="FretboardChordDiagramTopToggle" id="string_5_top">
-              </object>
-            </child>
-            <child>
-              <object class="FretboardChordDiagramTopToggle" id="string_6_top">
-              </object>
-            </child>
+            <!-- top toggles go here -->
           </object>
         </child>
         <child>
@@ -44,249 +21,10 @@
               </object>
             </child>
             <child type="overlay">
-              <object class="GtkGrid">
+              <object class="GtkGrid" id="grid">
                 <property name="hexpand">true</property>
                 <property name="vexpand">true</property>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_1_fret_1">
-                    <layout>
-                      <property name="column">0</property>
-                      <property name="row">0</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_1_fret_2">
-                    <layout>
-                      <property name="column">0</property>
-                      <property name="row">1</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_1_fret_3">
-                    <layout>
-                      <property name="column">0</property>
-                      <property name="row">2</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_1_fret_4">
-                    <layout>
-                      <property name="column">0</property>
-                      <property name="row">3</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_1_fret_5">
-                    <layout>
-                      <property name="column">0</property>
-                      <property name="row">4</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_2_fret_1">
-                    <layout>
-                      <property name="column">1</property>
-                      <property name="row">0</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_2_fret_2">
-                    <layout>
-                      <property name="column">1</property>
-                      <property name="row">1</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_2_fret_3">
-                    <layout>
-                      <property name="column">1</property>
-                      <property name="row">2</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_2_fret_4">
-                    <layout>
-                      <property name="column">1</property>
-                      <property name="row">3</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_2_fret_5">
-                    <layout>
-                      <property name="column">1</property>
-                      <property name="row">4</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_3_fret_1">
-                    <layout>
-                      <property name="column">2</property>
-                      <property name="row">0</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_3_fret_2">
-                    <layout>
-                      <property name="column">2</property>
-                      <property name="row">1</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_3_fret_3">
-                    <layout>
-                      <property name="column">2</property>
-                      <property name="row">2</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_3_fret_4">
-                    <layout>
-                      <property name="column">2</property>
-                      <property name="row">3</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_3_fret_5">
-                    <layout>
-                      <property name="column">2</property>
-                      <property name="row">4</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_4_fret_1">
-                    <layout>
-                      <property name="column">3</property>
-                      <property name="row">0</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_4_fret_2">
-                    <layout>
-                      <property name="column">3</property>
-                      <property name="row">1</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_4_fret_3">
-                    <layout>
-                      <property name="column">3</property>
-                      <property name="row">2</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_4_fret_4">
-                    <layout>
-                      <property name="column">3</property>
-                      <property name="row">3</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_4_fret_5">
-                    <layout>
-                      <property name="column">3</property>
-                      <property name="row">4</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_5_fret_1">
-                    <layout>
-                      <property name="column">4</property>
-                      <property name="row">0</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_5_fret_2">
-                    <layout>
-                      <property name="column">4</property>
-                      <property name="row">1</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_5_fret_3">
-                    <layout>
-                      <property name="column">4</property>
-                      <property name="row">2</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_5_fret_4">
-                    <layout>
-                      <property name="column">4</property>
-                      <property name="row">3</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_5_fret_5">
-                    <layout>
-                      <property name="column">4</property>
-                      <property name="row">4</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_6_fret_1">
-                    <layout>
-                      <property name="column">5</property>
-                      <property name="row">0</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_6_fret_2">
-                    <layout>
-                      <property name="column">5</property>
-                      <property name="row">1</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_6_fret_3">
-                    <layout>
-                      <property name="column">5</property>
-                      <property name="row">2</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_6_fret_4">
-                    <layout>
-                      <property name="column">5</property>
-                      <property name="row">3</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="FretboardChordDiagramToggle" id="string_6_fret_5">
-                    <layout>
-                      <property name="column">5</property>
-                      <property name="row">4</property>
-                    </layout>
-                  </object>
-                </child>
+                <!-- toggles go here -->
               </object>
             </child>
           </object>
