--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -29,7 +29,30 @@
             <property name="halign">center</property>
             <property name="valign">center</property>
             <child>
-              <object class="FretboardChordDiagram" id="chord_diagram">
+              <object class="GtkBox">
+                <child>
+                  <object class="GtkRevealer" id="filler">
+                    <property name="transition-type">slide-left</property>
+                    <property name="transition-duration">150</property>
+                    <child>
+                      <object class="GtkBox">
+                        <!-- total width of barre spin widget and margin -->
+                        <property name="width-request">46</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="FretboardChordDiagram" id="chord_diagram">
+                  </object>
+                </child>
+                <child>
+                  <object class="FretboardBarreSpin" id="barre_spin">
+                    <property name="valign">start</property>
+                    <property name="margin-end">10</property>
+                    <property name="margin-top">17</property>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
