--- a/src/ui/chord-diagram.ui
+++ b/src/ui/chord-diagram.ui
@@ -21,6 +21,61 @@
               </object>
             </child>
             <child type="overlay">
+              <object class="GtkStack" id="barre_overlay_stack">
+                <property name="transition-type">crossfade</property>
+                <property name="transition-duration">150</property>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="name">empty</property>
+                    <property name="child">
+                      <object class="GtkBox">
+                      </object>
+                    </property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="name">barre-2</property>
+                    <property name="child">
+                      <object class="GtkPicture" id="barre_2_image"></object>
+                    </property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="name">barre-3</property>
+                    <property name="child">
+                      <object class="GtkPicture" id="barre_3_image"></object>
+                    </property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="name">barre-4</property>
+                    <property name="child">
+                      <object class="GtkPicture" id="barre_4_image"></object>
+                    </property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="name">barre-5</property>
+                    <property name="child">
+                      <object class="GtkPicture" id="barre_5_image"></object>
+                    </property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="name">barre-6</property>
+                    <property name="child">
+                      <object class="GtkPicture" id="barre_6_image"></object>
+                    </property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child type="overlay">
               <object class="GtkGrid" id="grid">
                 <property name="hexpand">true</property>
                 <property name="vexpand">true</property>
