--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -24,25 +24,30 @@
         </child>
         <child>
           <object class="GtkBox">
-            <property name="orientation">vertical</property>
-            <property name="vexpand">true</property>
             <property name="halign">center</property>
             <property name="valign">center</property>
+            <property name="vexpand">true</property>
+          <child>
+            <object class="GtkRevealer" id="filler">
+              <property name="transition-type">slide-left</property>
+              <property name="transition-duration">150</property>
+              <child>
+                <object class="GtkBox">
+                  <!-- total width of barre spin widget and margin -->
+                  <property name="width-request">46</property>
+                </object>
+              </child>
+            </object>
+            </child>
+            <child>
+          <object class="GtkBox">
+            <property name="orientation">vertical</property>
+            <property name="halign">start</property>
+            <property name="valign">center</property>
             <property name="spacing">36</property>
+            <property name="margin-bottom">36</property>
             <child>
               <object class="GtkBox">
-                <child>
-                  <object class="GtkRevealer" id="filler">
-                    <property name="transition-type">slide-left</property>
-                    <property name="transition-duration">150</property>
-                    <child>
-                      <object class="GtkBox">
-                        <!-- total width of barre spin widget and margin -->
-                        <property name="width-request">46</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
                 <child>
                   <object class="FretboardChordDiagram" id="chord_diagram">
                   </object>
@@ -60,14 +65,18 @@
               <object class="GtkEntry" id="entry">
                 <property name="width-request">262</property>
                 <property name="hexpand">false</property>
-                <property name="halign">center</property>
+                <property name="halign">start</property>
+                <property name="margin-start">25</property>
                 <property name="xalign">0.5</property>
+                <property name="max-length">12</property>
                 <property name="placeholder-text">Chord Name</property>
                 <style>
                   <class name="fretboard-chord-entry" />
                 </style>
               </object>
             </child>
+          </object>
+        </child>
           </object>
         </child>
       </object>
