--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -1,11 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version='1.0' encoding='utf-8'?>
 <interface>
-  <requires lib="gtk" version="4.0"/>
-  <requires lib="Adw" version="1.0"/>
+  <requires lib="gtk" version="4.0" />
+  <requires lib="Adw" version="1.0" />
   <template class="FretboardWindow" parent="AdwApplicationWindow">
     <property name="title">Fretboard</property>
     <property name="default-width">500</property>
     <property name="default-height">600</property>
+    <property name="width-request">360</property>
+    <property name="height-request">294</property>
     <child>
       <object class="GtkBox">
         <property name="orientation">vertical</property>
@@ -23,49 +25,53 @@
           </object>
         </child>
         <child>
-          <object class="GtkBox">
-            <property name="halign">center</property>
-            <property name="valign">center</property>
-            <property name="vexpand">true</property>
-          <child>
-            <object class="GtkRevealer" id="filler">
-              <property name="transition-type">slide-left</property>
-              <property name="transition-duration">150</property>
-              <child>
-                <object class="GtkBox">
-                  <!-- total width of barre spin widget and margin -->
-                  <property name="width-request">46</property>
-                </object>
-              </child>
-            </object>
-            </child>
+          <object class="GtkScrolledWindow">
+            <property name="hscrollbar-policy">never</property>
             <child>
-          <object class="GtkBox">
-            <property name="orientation">vertical</property>
-            <property name="halign">start</property>
-            <property name="valign">center</property>
-            <property name="spacing">36</property>
-            <property name="margin-bottom">36</property>
-            <child>
-              <object class="FretboardChordDiagram" id="chord_diagram">
+              <object class="GtkBox">
+                <property name="halign">center</property>
+                <property name="valign">center</property>
+                <property name="vexpand">true</property>
+                <child>
+                  <object class="GtkRevealer" id="filler">
+                    <property name="transition-type">slide-left</property>
+                    <property name="transition-duration">150</property>
+                    <child>
+                      <object class="GtkBox">
+                        <property name="width-request">46</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkBox">
+                    <property name="orientation">vertical</property>
+                    <property name="halign">start</property>
+                    <property name="valign">center</property>
+                    <property name="spacing">36</property>
+                    <property name="margin-bottom">36</property>
+                    <child>
+                      <object class="FretboardChordDiagram" id="chord_diagram">
+              </object>
+                    </child>
+                    <child>
+                      <object class="GtkEntry" id="entry">
+                        <property name="width-request">262</property>
+                        <property name="hexpand">false</property>
+                        <property name="halign">start</property>
+                        <property name="margin-start">25</property>
+                        <property name="xalign">0.5</property>
+                        <property name="max-length">12</property>
+                        <property name="placeholder-text">Chord Name</property>
+                        <style>
+                          <class name="fretboard-chord-entry" />
+                        </style>
+                      </object>
+                    </child>
+                  </object>
+                </child>
               </object>
             </child>
-            <child>
-              <object class="GtkEntry" id="entry">
-                <property name="width-request">262</property>
-                <property name="hexpand">false</property>
-                <property name="halign">start</property>
-                <property name="margin-start">25</property>
-                <property name="xalign">0.5</property>
-                <property name="max-length">12</property>
-                <property name="placeholder-text">Chord Name</property>
-                <style>
-                  <class name="fretboard-chord-entry" />
-                </style>
-              </object>
-            </child>
-          </object>
-        </child>
           </object>
         </child>
       </object>
