--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -47,7 +47,7 @@ chord-diagram-top-toggle button:hover {
   background: rgba(153, 153, 153, 0.3);
 }
 
-.fretboard-chord-entry {
+chord-name-entry entry {
   font-size: 2rem;
   padding: 0.2em 0.5em;
   font-weight: bold;
