--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -52,10 +52,43 @@
                     <property name="margin-bottom">24</property>
                     <child>
                       <object class="FretboardChordDiagram" id="chord_diagram">
-              </object>
+                      </object>
                     </child>
                     <child>
                       <object class="FretboardChordNameEntry" id="entry">
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwClamp">
+                        <property name="halign">start</property>
+                        <property name="margin-start">25</property>
+                        <property name="maximum-size">262</property>
+                        <child>
+                          <object class="GtkStack" id="feedback_stack">
+                            <property name="transition-type">crossfade</property>
+                            <property name="transition-duration">150</property>
+                            <child>
+                              <object class="GtkStackPage">
+                                <property name="name">empty</property>
+                                <property name="child">
+                                  <object class="GtkBox"></object>
+                                </property>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="GtkStackPage">
+                                <property name="name">label</property>
+                                <property name="child">
+                                  <object class="GtkLabel" id="feedback_label">
+                                    <property name="wrap">true</property>
+                                    <property name="justify">center</property>
+                                    <property name="label">Matching chord not found</property>
+                                  </object>
+                                </property>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
                       </object>
                     </child>
                   </object>
