--- a/src/ui/chord-diagram-toggle.ui
+++ b/src/ui/chord-diagram-toggle.ui
@@ -9,6 +9,9 @@
           <property name="valign">center</property>
           <property name="width-request">38</property>
           <property name="height-request">38</property>
+          <style>
+            <class name="flat" />
+          </style>
         </object>
       </child>
   </template>
