--- a/src/ui/chord-diagram-top-toggle.ui
+++ b/src/ui/chord-diagram-top-toggle.ui
@@ -8,6 +8,9 @@
           <object class="GtkToggleButton" id="button">
             <property name="width-request">38</property>
             <property name="height-request">38</property>
+            <style>
+              <class name="flat" />
+            </style>
           </object>
         </child>
         <child type="overlay">
