--- a/src/ui/chord-name-entry.ui
+++ b/src/ui/chord-name-entry.ui
@@ -18,6 +18,7 @@
         </child>
         <child type="overlay">
           <object class="GtkRevealer" id="revealer">
+            <property name="visible">false</property>
             <property name="transition-type">crossfade</property>
             <property name="transition-duration">150</property>
             <property name="halign">end</property>
