--- a/src/ui/style-hc-dark.css
+++ b/src/ui/style-hc-dark.css
@@ -5,6 +5,11 @@ chord-diagram-top-toggle image {
 chord-diagram-top-toggle image.open {
   color: @accent_bg_color;
 }
+
 chord-diagram-top-toggle button:checked:hover {
   box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.6);
+}
+
+.fretboard-chord-name-entry entry placeholder {
+  color: rgba(255, 255, 255, 0.6);
 }
