--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -17,6 +17,7 @@
               <object class="GtkMenuButton">
                 <property name="icon-name">open-menu-symbolic</property>
                 <property name="menu-model">primary_menu</property>
+                <property name="primary">true</property>
               </object>
             </child>
             <style>
@@ -102,6 +103,10 @@
   </template>
   <menu id="primary_menu">
     <section>
+      <item>
+        <attribute name="label" translatable="yes">_Empty Chord</attribute>
+        <attribute name="action">win.empty-chord</attribute>
+      </item>
       <item>
         <attribute name="label" translatable="yes">_About Fretboard</attribute>
         <attribute name="action">app.about</attribute>
