--- a/src/ui/chord-name-entry.ui
+++ b/src/ui/chord-name-entry.ui
@@ -12,7 +12,7 @@
             <property name="hexpand">true</property>
             <property name="xalign">0.5</property>
             <property name="width-request">262</property>
-            <property name="placeholder-text">Chord Name</property>
+            <property name="placeholder-text" translatable="yes">Chord Name</property>
             <property name="max-length">15</property>
           </object>
         </child>
