--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -16,6 +16,7 @@
             <child type="end">
               <object class="GtkMenuButton">
                 <property name="icon-name">open-menu-symbolic</property>
+                <property name="tooltip-text" translatable="yes">Main Menu</property>
                 <property name="menu-model">primary_menu</property>
                 <property name="primary">true</property>
               </object>
