--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -4,8 +4,8 @@
   <requires lib="Adw" version="1.0" />
   <template class="FretboardWindow" parent="AdwApplicationWindow">
     <property name="title">Fretboard</property>
-    <property name="default-width">450</property>
-    <property name="default-height">550</property>
+    <property name="default-width">500</property>
+    <property name="default-height">600</property>
     <property name="width-request">360</property>
     <property name="height-request">294</property>
     <child>
@@ -51,6 +51,7 @@
                     <property name="halign">start</property>
                     <property name="valign">center</property>
                     <property name="spacing">24</property>
+                    <property name="margin-top">12</property>
                     <property name="margin-bottom">24</property>
                     <child>
                       <object class="FretboardChordDiagram" id="chord_diagram">
