--- a/src/ui/style-hc-dark.css
+++ b/src/ui/style-hc-dark.css
@@ -1,12 +1,12 @@
-chord-diagram-top-toggle image {
+.fretboard-chord-diagram-top-toggle, .fretboard-chord-diagram-top-toggle image {
   color: rgb(255, 255, 255);
 }
 
-chord-diagram-top-toggle image.open {
+.fretboard-chord-diagram-top-toggle.open, .fretboard-chord-diagram-top-toggle image.open {
   color: @accent_bg_color;
 }
 
-chord-diagram-top-toggle button:checked:hover {
+.fretboard-chord-diagram-top-toggle button:checked:hover {
   box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.6);
 }
 
