--- a/src/ui/style-hc.css
+++ b/src/ui/style-hc.css
@@ -1,12 +1,12 @@
-chord-diagram-top-toggle image {
+.fretboard-chord-diagram-top-toggle, .fretboard-chord-diagram-top-toggle image {
   color: rgb(0, 0, 0);
 }
 
-chord-diagram-top-toggle image.open {
+.fretboard-chord-diagram-top-toggle.open, .fretboard-chord-diagram-top-toggle image.open {
   color: @accent_bg_color;
 }
 
-chord-diagram-top-toggle button:checked:hover {
+.fretboard-chord-diagram-top-toggle button:checked:hover {
   box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.5);
 }
 
@@ -16,4 +16,8 @@ chord-diagram-top-toggle button:checked:hover {
 
 .fretboard-chord-name-entry button image {
   opacity: 1;
+}
+
+.fretboard-chord-preview-dot.active {
+  border: 1px solid @border-color;
 }
