--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -9,86 +9,110 @@
     <property name="width-request">360</property>
     <property name="height-request">294</property>
     <child>
-      <object class="GtkBox">
-        <property name="orientation">vertical</property>
+      <object class="AdwLeaflet" id="navigation_stack">
+        <property name="can-unfold">false</property>
         <child>
-          <object class="GtkHeaderBar" id="header_bar">
-            <child type="end">
-              <object class="GtkMenuButton">
-                <property name="icon-name">open-menu-symbolic</property>
-                <property name="tooltip-text" translatable="yes">Main Menu</property>
-                <property name="menu-model">primary_menu</property>
-                <property name="primary">true</property>
-              </object>
-            </child>
-            <style>
-              <class name="flat" />
-            </style>
-          </object>
-        </child>
-        <child>
-          <object class="GtkScrolledWindow">
-            <property name="hscrollbar-policy">never</property>
-            <child>
+          <object class="AdwLeafletPage">
+            <property name="name">chord-view</property>
+            <property name="child">
               <object class="GtkBox">
-                <property name="halign">center</property>
-                <property name="valign">center</property>
-                <property name="vexpand">true</property>
+                <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkRevealer" id="filler">
-                    <property name="transition-type">slide-left</property>
-                    <property name="transition-duration">150</property>
-                    <child>
-                      <object class="GtkBox">
-                        <property name="width-request">46</property>
+                  <object class="GtkHeaderBar" id="header_bar">
+                    <child type="end">
+                      <object class="GtkMenuButton">
+                        <property name="icon-name">open-menu-symbolic</property>
+                        <property name="tooltip-text" translatable="yes">Main Menu</property>
+                        <property name="menu-model">primary_menu</property>
+                        <property name="primary">true</property>
                       </object>
                     </child>
+                    <style>
+                      <class name="flat" />
+                    </style>
                   </object>
                 </child>
                 <child>
-                  <object class="GtkBox">
-                    <property name="orientation">vertical</property>
-                    <property name="halign">start</property>
-                    <property name="valign">center</property>
-                    <property name="margin-top">12</property>
-                    <property name="margin-bottom">24</property>
+                  <object class="GtkScrolledWindow">
+                    <property name="hscrollbar-policy">never</property>
                     <child>
-                      <object class="FretboardChordDiagram" id="chord_diagram">
-                      </object>
-                    </child>
-                    <child>
-                      <object class="FretboardChordNameEntry" id="entry">
-                        <property name="margin-top">24</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="AdwClamp">
-                        <property name="halign">start</property>
-                        <property name="margin-start">25</property>
-                        <property name="maximum-size">262</property>
+                      <object class="GtkBox">
+                        <property name="halign">center</property>
+                        <property name="valign">center</property>
+                        <property name="vexpand">true</property>
                         <child>
-                          <object class="GtkStack" id="feedback_stack">
-                            <property name="transition-type">crossfade</property>
+                          <object class="GtkRevealer" id="filler">
+                            <property name="transition-type">slide-left</property>
                             <property name="transition-duration">150</property>
-                            <property name="margin-top">12</property>
                             <child>
-                              <object class="GtkStackPage">
-                                <property name="name">empty</property>
-                                <property name="child">
-                                  <object class="GtkBox"></object>
-                                </property>
+                              <object class="GtkBox">
+                                <property name="width-request">46</property>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkBox">
+                            <property name="orientation">vertical</property>
+                            <property name="halign">start</property>
+                            <property name="valign">center</property>
+                            <property name="margin-top">12</property>
+                            <property name="margin-bottom">24</property>
+                            <child>
+                              <object class="FretboardChordDiagram" id="chord_diagram"></object>
+                            </child>
+                            <child>
+                              <object class="FretboardChordNameEntry" id="entry">
+                                <property name="margin-top">12</property>
                               </object>
                             </child>
                             <child>
-                              <object class="GtkStackPage">
-                                <property name="name">label</property>
-                                <property name="child">
-                                  <object class="GtkLabel" id="feedback_label">
-                                    <property name="wrap">true</property>
-                                    <property name="justify">center</property>
-                                    <property name="label">Chord not found</property>
+                              <object class="AdwClamp">
+                                <property name="halign">start</property>
+                                <property name="margin-start">25</property>
+                                <property name="maximum-size">262</property>
+                                <child>
+                                  <object class="GtkStack" id="feedback_stack">
+                                    <property name="transition-type">crossfade</property>
+                                    <property name="transition-duration">150</property>
+                                    <property name="margin-top">16</property>
+                                    <child>
+                                      <object class="GtkStackPage">
+                                        <property name="name">empty</property>
+                                        <property name="child">
+                                          <object class="GtkBox" />
+                                        </property>
+                                      </object>
+                                    </child>
+                                    <child>
+                                      <object class="GtkStackPage">
+                                        <property name="name">label</property>
+                                        <property name="child">
+                                          <object class="GtkLabel" id="feedback_label">
+                                            <property name="wrap">true</property>
+                                            <property name="justify">center</property>
+                                            <property name="label">Chord not found</property>
+                                          </object>
+                                        </property>
+                                      </object>
+                                    </child>
+                                    <child>
+                                      <object class="GtkStackPage">
+                                        <property name="name">chord-actions</property>
+                                        <property name="child">
+                                          <object class="GtkButton" id="more_variants">
+                                            <property name="label" translatable="yes">More Variants</property>
+                                            <property name="halign">center</property>
+                                            <property name="action-name">win.more-variants</property>
+                                            <style>
+                                              <class name="pill" />
+                                            </style>
+                                          </object>
+                                        </property>
+                                      </object>
+                                    </child>
                                   </object>
-                                </property>
+                                </child>
                               </object>
                             </child>
                           </object>
@@ -98,7 +122,27 @@
                   </object>
                 </child>
               </object>
-            </child>
+            </property>
+          </object>
+        </child>
+        <child>
+          <object class="AdwLeafletPage">
+            <property name="name">more-variants</property>
+            <property name="child">
+              <object class="GtkBox" id="variants_page">
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="AdwHeaderBar">
+                    <child type="start">
+                      <object class="GtkButton">
+                        <property name="icon-name">go-previous-symbolic</property>
+                        <property name="action-name">win.chord-view</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </property>
           </object>
         </child>
       </object>
